--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,5 @@ JWT_EXPIRES_IN=7d
 # Entorno
 NODE_ENV=development
 
-# API Binance (no requiere API key para precios públicos)
-BINANCE_API_URL=https://api.binance.com/api/v3
+# API CoinGecko (no requiere API key para precios públicos)
+COINGECKO_API_URL=https://api.coingecko.com/api/v3
